fix: add word wrapping for code
Close #40.

--- a/webserver/web/src/css/custom.scss
+++ b/webserver/web/src/css/custom.scss
@@ -127,6 +127,7 @@ td.hljs-ln-code {
   margin-bottom: -1.25rem;
   margin-top: -1.5rem;
   border-radius: 0 0 $radius-large $radius-large;
+  white-space: pre-wrap;
 }
 
 .box-title {
